--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.7.0",
     "react-circle": "^1.1.1",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
